# constellate

./: .gitignore  LICENSE  README.md  app.py  config.py  database.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
forms/: __init__.py  auth.py
models/: __init__.py  article.py  user.py
routes/: __init__.py  auth.py
templates/: base.html
templates/auth/: login.html  register.html
tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_models.py  test_routes.py
